Updated opencv version

--- a/Training_Customised_Image_Detection_Model.ipynb
+++ b/Training_Customised_Image_Detection_Model.ipynb
@@ -9,7 +9,7 @@
         "KdyE_2lbPOKH",
         "zEv7XDo7nlpK"
       ],
-      "authorship_tag": "ABX9TyOaszYm8gv99X/R/wM3KQmE",
+      "authorship_tag": "ABX9TyNI02+tNFR8Pq6E5CJhl8VG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,7 @@
         "np.random.seed(SEED)\n",
         "tf.random.set_seed(SEED)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -77,7 +77,7 @@
         "import os\n",
         "print(f\"Current OS: {os.name}\") "
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -127,7 +127,7 @@
         "    'LABELMAP': os.path.join(paths['ANNOTATION_PATH'], LABEL_MAP_NAME)\n",
         "}"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -141,7 +141,7 @@
         "    if not os.path.exists(p):\n",
         "        !mkdir -p {p}"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -168,7 +168,7 @@
         "if not os.path.exists(os.path.join(paths['APIMODEL_PATH'], 'research', 'objection_detection')):\n",
         "    !git clone https://github.com/tensorflow/models {paths['APIMODEL_PATH']}"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -204,7 +204,7 @@
         "    !apt-get install protobuf-compiler\n",
         "    !cd Tensorflow/models/research && protoc object_detection/protos/*.proto --python_out=. && cp object_detection/packages/tf2/setup.py . && python -m pip install . \n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -349,7 +349,7 @@
         "VERIFICATION_SCRIPT = os.path.join(paths['APIMODEL_PATH'], 'research', 'object_detection', 'builders', 'model_builder_tf2_test.py')\n",
         "!python {VERIFICATION_SCRIPT}"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -663,7 +663,7 @@
         "# test if TF object detection library could be loaded\n",
         "import object_detection"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -690,7 +690,7 @@
         "    !mv {PRETRAINED_MODEL_NAME+'.tar.gz'} {paths['PRETRAINED_MODEL_PATH']}\n",
         "    !cd {paths['PRETRAINED_MODEL_PATH']} && tar -zxvf {PRETRAINED_MODEL_NAME+'.tar.gz'}"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -748,7 +748,7 @@
         "\n",
         "!git clone https://github.com/jackliu333/object_detection_using_tensorflow.git"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -794,7 +794,7 @@
         "        f.write('\\tid:{}\\n'.format(label['id']))\n",
         "        f.write('}\\n')"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -821,7 +821,7 @@
         "    else:\n",
         "        !mkdir -p {os.path.join(paths['IMAGE_PATH'], i)}"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -870,7 +870,7 @@
         "            shutil.copy(os.path.join(from_path, tmp_name_full), \\\n",
         "                        os.path.join(paths['IMAGE_PATH'], \"test\"))"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -892,7 +892,7 @@
         "if not os.path.exists(files['TF_RECORD_SCRIPT']):\n",
         "    !git clone https://github.com/nicknochnack/GenerateTFRecord {paths['SCRIPTS_PATH']}"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -909,7 +909,7 @@
         "!python {files['TF_RECORD_SCRIPT']} -x {os.path.join(paths['IMAGE_PATH'], 'train')} -l {files['LABELMAP']} -o {os.path.join(paths['ANNOTATION_PATH'], 'train.record')} \n",
         "!python {files['TF_RECORD_SCRIPT']} -x {os.path.join(paths['IMAGE_PATH'], 'test')} -l {files['LABELMAP']} -o {os.path.join(paths['ANNOTATION_PATH'], 'test.record')} "
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -938,7 +938,7 @@
       "source": [
         "!cp {os.path.join(paths['PRETRAINED_MODEL_PATH'], PRETRAINED_MODEL_NAME, 'pipeline.config')} {paths['CHECKPOINT_PATH']}"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -982,7 +982,7 @@
         "with tf.io.gfile.GFile(files['PIPELINE_CONFIG'], \"wb\") as f:                                                                                                                                                                                                                     \n",
         "    f.write(config_text)   "
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -993,6 +993,19 @@
       "source": [
         "# Model training"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# fix opencv-python version issue \n",
+        "!pip uninstall opencv-python-headless \n",
+        "!pip install opencv-python-headless==4.1.2.30"
+      ],
+      "metadata": {
+        "id": "7_tcn61DtpdV"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1008,7 +1021,7 @@
         "command = \"python {} --model_dir={} --pipeline_config_path={} --num_train_steps=2000\".format(TRAINING_SCRIPT, paths['CHECKPOINT_PATH'],files['PIPELINE_CONFIG'])\n",
         "!{command}"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1138,7 +1151,7 @@
         "# command = \"python {} --model_dir={} --pipeline_config_path={} --checkpoint_dir={}\".format(TRAINING_SCRIPT, paths['CHECKPOINT_PATH'],files['PIPELINE_CONFIG'], paths['CHECKPOINT_PATH'])\n",
         "# !{command}"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1180,7 +1193,7 @@
         "    detections = detection_model.postprocess(prediction_dict, shapes)\n",
         "    return detections"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1245,7 +1258,7 @@
         "plt.imshow(cv2.cvtColor(image_np_with_detections, cv2.COLOR_BGR2RGB))\n",
         "plt.show()"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1270,7 +1283,7 @@
       "source": [
         ""
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     }
   ]
