--- a/images_combined/Raw Image processing.ipynb
+++ b/images_combined/Raw Image processing.ipynb
@@ -109,10 +109,10 @@
     "    \n",
     "    \n",
     "# source folders containing images\n",
-    "source_path = '/Users/liupeng/Documents/GitHub/object_detection_using_tensorflow/images_new'\n",
+    "source_path = '/Users/liupeng/Documents/GitHub/object_detection_using_tensorflow/images_separate'\n",
     "\n",
     "# Destination folder where all images will be collected\n",
-    "destination_folder = '/Users/liupeng/Documents/GitHub/object_detection_using_tensorflow/images_new_v2' \n",
+    "destination_folder = '/Users/liupeng/Documents/GitHub/object_detection_using_tensorflow/images_combined' \n",
     "\n",
     "# Collect images\n",
     "collect_images(source_path, destination_folder)\n"
@@ -213,7 +213,7 @@
     "        tree.write(fh)\n",
     "\n",
     "# Create XML\n",
-    "file_path = \"/Users/liupeng/Documents/GitHub/object_detection_using_tensorflow/images_new_v2\"\n",
+    "file_path = \"/Users/liupeng/Documents/GitHub/object_detection_using_tensorflow/images_combined\"\n",
     "# filename = \"2023_8_11_11_22_30_553933_png.rf.59102374c2520696d8fe64158b5ccb75.jpg\"\n",
     "# xmin, ymin, xmax, ymax = 31, 179, 319, 562\n",
     "# create_xml(folder, source_folder, filename, xmin, ymin, xmax, ymax)\n",
@@ -669,254 +669,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 109,
    "id": "bc4a5b24-6abb-4be9-a0f1-40932e4e56c0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ProductType_Babyfood</th>\n",
-       "      <th>ProductType_Babymilk-powder-</th>\n",
-       "      <th>ProductType_BeehoonVermicelliMeesua</th>\n",
-       "      <th>ProductType_BiscuitsCrackersCookies</th>\n",
-       "      <th>ProductType_Breakfast cereals -cornflakes-</th>\n",
-       "      <th>ProductType_CerealBeverage-powder-</th>\n",
-       "      <th>ProductType_ChilliSauce</th>\n",
-       "      <th>ProductType_Coffee</th>\n",
-       "      <th>ProductType_Cookies</th>\n",
-       "      <th>ProductType_Crackers</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Weight_700-799g</th>\n",
-       "      <th>Weight_800-899g</th>\n",
-       "      <th>Weight_900-999g</th>\n",
-       "      <th>Weight_Nonfood</th>\n",
-       "      <th>HalalStatus_Halal</th>\n",
-       "      <th>HalalStatus_NonHalal</th>\n",
-       "      <th>HalalStatus_Nonfood</th>\n",
-       "      <th>HealthStatus_Healthy</th>\n",
-       "      <th>HealthStatus_NonHealthy</th>\n",
-       "      <th>HealthStatus_Nonfood</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 53 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   ProductType_Babyfood  ProductType_Babymilk-powder-  \\\n",
-       "0                 False                         False   \n",
-       "1                 False                         False   \n",
-       "2                 False                         False   \n",
-       "3                 False                         False   \n",
-       "4                 False                         False   \n",
-       "\n",
-       "   ProductType_BeehoonVermicelliMeesua  ProductType_BiscuitsCrackersCookies  \\\n",
-       "0                                False                                False   \n",
-       "1                                False                                False   \n",
-       "2                                False                                False   \n",
-       "3                                False                                False   \n",
-       "4                                False                                False   \n",
-       "\n",
-       "   ProductType_Breakfast cereals -cornflakes-  \\\n",
-       "0                                       False   \n",
-       "1                                       False   \n",
-       "2                                       False   \n",
-       "3                                       False   \n",
-       "4                                       False   \n",
-       "\n",
-       "   ProductType_CerealBeverage-powder-  ProductType_ChilliSauce  \\\n",
-       "0                               False                    False   \n",
-       "1                               False                    False   \n",
-       "2                               False                    False   \n",
-       "3                               False                    False   \n",
-       "4                               False                    False   \n",
-       "\n",
-       "   ProductType_Coffee  ProductType_Cookies  ProductType_Crackers  ...  \\\n",
-       "0               False                False                 False  ...   \n",
-       "1               False                False                 False  ...   \n",
-       "2               False                False                 False  ...   \n",
-       "3               False                False                 False  ...   \n",
-       "4               False                False                 False  ...   \n",
-       "\n",
-       "   Weight_700-799g  Weight_800-899g  Weight_900-999g  Weight_Nonfood  \\\n",
-       "0            False            False            False           False   \n",
-       "1            False            False            False           False   \n",
-       "2            False            False            False           False   \n",
-       "3            False            False            False           False   \n",
-       "4            False            False            False           False   \n",
-       "\n",
-       "   HalalStatus_Halal  HalalStatus_NonHalal  HalalStatus_Nonfood  \\\n",
-       "0              False                  True                False   \n",
-       "1              False                  True                False   \n",
-       "2              False                  True                False   \n",
-       "3              False                  True                False   \n",
-       "4              False                  True                False   \n",
-       "\n",
-       "   HealthStatus_Healthy  HealthStatus_NonHealthy  HealthStatus_Nonfood  \n",
-       "0                 False                     True                 False  \n",
-       "1                 False                     True                 False  \n",
-       "2                 False                     True                 False  \n",
-       "3                 False                     True                 False  \n",
-       "4                 False                     True                 False  \n",
-       "\n",
-       "[5 rows x 53 columns]"
-      ]
-     },
-     "execution_count": 108,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "label_df_encoded = pd.get_dummies(label_df, columns=['ProductType', 'Weight', 'HalalStatus', 'HealthStatus'])\n",
-    "label_df_encoded.head()"
+    "# label_df_encoded = pd.get_dummies(label_df, columns=['ProductType', 'Weight', 'HalalStatus', 'HealthStatus'])\n",
+    "# label_df_encoded.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "8fae2594-e4dd-4a35-a3eb-f1a3fb0369a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_path = \"/Users/liupeng/Documents/GitHub/object_detection_using_tensorflow/images_combined\"\n",
+    "\n",
+    "annotations2 = pd.concat([annotations, label_df], axis=1)\n",
+    "annotations2.to_csv(os.path.join(file_path,\"raw_master_list2.csv\"), index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fae2594-e4dd-4a35-a3eb-f1a3fb0369a4",
+   "id": "a907fbef-53d4-4898-a63b-76e28861059b",
    "metadata": {},
    "outputs": [],
    "source": []
