--- a/images_combined/Raw Image processing.ipynb
+++ b/images_combined/Raw Image processing.ipynb
@@ -254,7 +254,24 @@
     "for tmp_folder_name in unique_labels:\n",
     "    tmp_folder_path = os.path.join(folder_path, tmp_folder_name)\n",
     "    # The 'exist_ok' parameter is set to True, which means the directory won't be created if it exists\n",
-    "    os.makedirs(tmp_folder_path, exist_ok=True)"
+    "    os.makedirs(tmp_folder_path, exist_ok=True)\n",
+    "    \n",
+    "    # add .gitkeep file in each empty folder; otherwise it will not be uploaded in github\n",
+    "    # Create the .gitkeep file within the folder\n",
+    "    gitkeep_path = os.path.join(tmp_folder_path, \".gitkeep\")\n",
+    "    # Create the .gitkeep file (it will be empty)\n",
+    "    with open(gitkeep_path, 'w'):\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "444a482e-9929-42d3-ab72-7945a5053d09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
    ]
   },
   {
