update master list

--- a/images_combined/Raw Image processing.ipynb
+++ b/images_combined/Raw Image processing.ipynb
@@ -512,8 +512,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "d164c7ac-a2ae-4c36-bd3f-ccd899ba1458",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "\n",
+    "frame = cv2.imread(\"data_edit/Photo on 29-9-23 at 11.45 AM #3.jpg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f60e7b30-9f01-4c21-989a-bf1d5725da09",
    "metadata": {},
    "outputs": [],
    "source": []
