--- a/images_combined/Raw Image processing.ipynb
+++ b/images_combined/Raw Image processing.ipynb
@@ -512,14 +512,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "d164c7ac-a2ae-4c36-bd3f-ccd899ba1458",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[ WARN:0@660.500] global loadsave.cpp:244 findDecoder imread_('data_edit/Photo on 9-11-23 at 4.33_PM #3.jpg'): can't open/read file: check file path/integrity\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "\n",
-    "frame = cv2.imread(\"data_edit/Photo on 29-9-23 at 11.45 AM #3.jpg\")"
+    "frame = cv2.imread(\"data_edit/Photo on 9-11-23 at 4.33_PM #3.jpg\")"
    ]
   },
   {
@@ -528,7 +536,9 @@
    "id": "f60e7b30-9f01-4c21-989a-bf1d5725da09",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Photo on 9-11-23 at 4.33 PM #3.jpg"
+   ]
   }
  ],
  "metadata": {
