--- a/bayesian_model/v1/Bayesian model v2.ipynb
+++ b/bayesian_model/v1/Bayesian model v2.ipynb
@@ -4934,9 +4934,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py37",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "py37"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -4948,7 +4948,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
